--- a/docs/extra.css
+++ b/docs/extra.css
@@ -45,8 +45,7 @@ pre {
     white-space: -pre-wrap;
     white-space: -o-pre-wrap;
     word-wrap: break-word;
-    overflow: inherit;
-    background: #FAFAFA;
+    background: #e9f7ed;
     padding-top: 0.5em;
     padding-bottom: 0.5em;
     padding-left: 20px;
@@ -57,10 +56,11 @@ pre {
 
 pre code {
     color: #182125;
-    background: #FAFAFA;
+    background: #e9f7ed;
 }
 
 code {
+    word-wrap: break-word;
     font-size: 85%;
     font-family: Consolas,Monaco,"Courier New",monospace;
     border-radius: 0;
