--- a/pkgdown/extra.css
+++ b/pkgdown/extra.css
@@ -1,4 +1,5 @@
 @import url("https://enpiar.com/css/font.css");
+@import url("https://enpiar.com/css/font.css");
 @import url("https://enpiar.com/css/custom.css");
 
 body {
@@ -84,4 +85,3 @@ table p {
 .ref-index h2 {
     font-size: 24px;
 }
-
